--- a/courses/advanced-node/package.json
+++ b/courses/advanced-node/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "webworker-threads": "^0.7.17"
   }
 }
