--- a/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
+++ b/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gatsby": "^2.3.16",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-source-filesystem": "^2.0.29",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
