update(gatsby-bootcamp): add image sourcing & processing
- add gatsby plugins for image processing
  * gatsby-plugin-sharp
  * gatsby-remark-images
  * gatsby-remark-relative-images
- update gatsby config file to resolve images
- add demo image

--- a/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
+++ b/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "gatsby": "^2.3.16",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-remark-images": "^3.0.10",
+    "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-remark": "^2.3.8",
     "node-sass": "^4.11.0",
