--- a/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
+++ b/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-remark-images": "^3.0.10",
     "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-source-contentful": "^2.0.50",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-remark": "^2.3.8",
     "node-sass": "^4.11.0",
