--- a/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
+++ b/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.2.0",
     "gatsby": "^2.3.16",
+    "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-remark-images": "^3.0.10",
@@ -24,7 +25,8 @@
     "gatsby-transformer-remark": "^2.3.8",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "env-cmd": "^8.0.2",
