--- a/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
+++ b/courses/great-gatsby-bootcamp/gatsby-bootcamp/package.json
@@ -9,6 +9,7 @@
     "develop": "env-cmd .env gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
+    "now-build": "npm run build",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
