--- a/courses/advanced-node/app/package.json
+++ b/courses/advanced-node/app/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js --ignore tests",
-    "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build":
-      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "heroku-postbuild": "npm run build"
+    "client": "yarn --cwd client start",
+    "dev": "concurrently \"yarn server\" \"yarn client\"",
+    "build": "NPM_CONFIG_PRODUCTION=false yarn --cwd client install && yarn --cwd client build",
+    "heroku-postbuild": "yarn build"
   },
   "author": "",
   "license": "ISC",
